--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .intro_firstpage {
-  text-align: center;
+  align-content: center;
 }
 
 body {
@@ -14,9 +14,13 @@ body {
 }
 
 .pizzapng {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   animation: pizzaframe 2s infinite;
   animation-direction: alternate;
   position: relative;
+  align-content: centerclass="bottomtext";
 }
 
 @keyframes pizzaframe {
